--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 					<section>
 					<section>
-						<ul>
+						<ul style="font-size:80%">
 					<li>Plan de estudios</li>
 					<ul>
 						<li>GADE</li>
@@ -205,7 +205,7 @@
 							<div><img class="img_noborder" src="images/youtube.png" alt="YouTube icon" height="11%" width="11%"></div>
 						<div>
 							<ul style = "font-size:25px">
-								<li>Tiempo de viaualización</li>
+								<li>Tiempo de visualización</li>
 								<li>Retención de la audiencia</li>
 								<li>Datos demográficos</li>
 								<li>Ubicaciones de reproducción</li>
@@ -217,15 +217,84 @@
 						</section>
 						<section>
 							<h4>Youtube analytics</h4>
-							<img class="img_noborder" src="images/ytanalytics.png" alt="YouTube analitics" height="11%" width="11%">
+							<img src="images/ytanalytics.png" alt="YouTube analitics">
+						</section>
+
+						<section>
+							<div>
+								<img class="img_noborder" src="images/moodle2.png" alt="Moodle" height="10%" width="10%">
+							</div>
+							<div>
+								<h3>Información contenida en los informes de Moodle</h3>
+							</div>
+							<div>
+								<ul>
+									<li>Hora de la conexión</li>
+									<li>Usuario</li>
+									<li>Recurso</li>
+									<li>Dispositivo</li>
+									<li>IP</li>
+								</ul>
+							</div>
+						</section>
+
+
+						<section>
+							<div>
+								<img class="img_noborder" src="images/moodle2.png" alt="Moodle" height="10%" width="10%">
+							</div>
+							<div>
+								<h3>Información contenida en los informes de Moodle</h3>
+							</div>
+							<div>
+								<ul>
+									<li>57267 registros</li>
+									<li>2209 registros visionado de vídeos</li>
+									<li>96 usuarios</li>
+								</ul>
+
+								<table>
+									<thead>
+										<tr>
+											<th>Min</th>
+											<th>Max</th>
+											<th>Mean</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>1</td>
+											<td>82</td>
+											<td>23</td>
+										</tr>
+
+									</tbody>
+								</table>
+							</div>
+						</section>
+
+						<section>
+							<img src="images/visualizaciones.png" alt="Visualizaciones Moodle" width="900px", height="600px">
+						</section>
+						<section>
+							<img src="images/vis_videos.png" alt="Visualizaciones por vídeo Moodle" width="900px", height="600px">
+						</section>
+						<section>
+							<img src="images/dif_dias.png" alt="Días diferencia visualización" width="900px", height="600px">
 						</section>
 						</section>
 				<section>
 					<h4>Conclusiones</h4>
+					<ul>
+						<li>Se ha descrito el uso del vídeo educativo como material de apoyo didáctico</li>
+						<li>YouTube como alojamiento de vídeos educativos</li>
+						<li>La falta de monitorización del alumnado por YouTube se puede suplir con información proporcionada por Moodle</li>
+						<li>Trabajos futuros: relacionar visionado de vídeos con las notas en pruebas objetivas y calificación final</li>
+					</ul>
 				</section>
 
 				<section data-state="no-title-footer" >
-					<h1 class="title">Generación automática de exámenes en PDF y cuestionarios Moodle con Mathematica</h1>
+					<h1 class="title">Creación y uso de vídeos docentes como complemento a las clases prácticas de Matemáticas en los grados de GE y GADE</h1>
 					<!--<h4 class="author">Emilio Gómez / Nancy Dávila / Christian González</h4>
 					<h4 class="affilation">Universidad de Las Palmas de Gran Canaria</h4>-->
 					<div style="float:right;">
